fixes alignments in mills' mess article

--- a/style.css
+++ b/style.css
@@ -321,3 +321,9 @@ kbd {
     position: absolute;
   }
 }
+
+/* Top level images should be centered */
+body > p > img {
+  display: block;
+  margin: 0 auto;
+}
